--- a/Lecture11.ipynb
+++ b/Lecture11.ipynb
@@ -375,6 +375,7 @@
     "\n",
     "\n",
     "\\begin{aligned}\n",
+    "\\small\n",
     "\\mathcal{N}_h y(t^n) & = y(t^{n+1}) - y(t^n)  - h f(t^n, y(t^n))\n",
     "\\\\\n",
     "    & = y(t^{n}+h) - y(t^n)  - h f(t^n, y(t^n))\n",
