--- a/Lecture12.ipynb
+++ b/Lecture12.ipynb
@@ -62,10 +62,8 @@
     "\\renewcommand{PDux}{\\frac{\\partial u}{\\partial x}}\n",
     "\\renewcommand{PDutt}{\\frac{\\partial ^2u}{\\partial t^2}}\n",
     "\\renewcommand{PDuxx}{\\frac{\\partial ^2u}{\\partial x^2}}\n",
-    "\\large{\n",
     "a(x,t)\\PDutt + 2b(x,t)\\frac{\\partial ^2u}{\\partial t\\partial x} + c(x,t)\\PDuxx \n",
     "+  d(x,t)\\PDut + e(x,t)\\PDux = f(t,x,u)\n",
-    "}\n",
     "$$\n",
     "\n",
     "\n",
@@ -371,18 +369,21 @@
     "* For convenience, reverse the time for Black-Scholes notation: $ t \\leftarrow T - t$\n",
     "\n",
     "$$\n",
+    "\\small\n",
     "\\PDut - \\frac{1}{2}\\sigma^2S^2\\PDuSS - rS\\PDuS + ru = 0\n",
     "$$\n",
     "\n",
     "* Approximate the Black-Scholes Eqn by\n",
     "\n",
     "$$\n",
+    "\\small\n",
     "\\FDut - \\frac{1}{2} \\sigma^2 x_i^2 \\FDuxx - r x_i \\FDuxc + r u_{i,k} = 0\n",
     "$$\n",
     "\n",
     "* This can be rewritten simply as\n",
     "\n",
     "\\begin{aligned}\n",
+    "\\small\n",
     "u_{i,k+1} & = \\left\\{ \\frac{1}{2}\\sigma^2 x_i^2 \\frac{\\triangle t}{\\triangle x^2} - r x_i \\frac{\\triangle t}{2\\triangle x} \\right\\} u_{i-1,k}\n",
     "\\\\\n",
     "& + \\left\\{ 1 - \\sigma^2 x_i^2 \\frac{\\triangle t}{\\triangle x^2}  -r \\triangle t \\right\\} u_{i,k}\n",
@@ -663,12 +664,14 @@
     "* Approximate the Black-Scholes Eqn by\n",
     "\n",
     "$$\n",
+    "\\small\n",
     "\\FDutb - \\frac{1}{2} \\sigma^2 x_i^2 \\FDuxx - r x_i \\FDuxc = - r u_{i,k}\n",
     "$$\n",
     "\n",
     "* Which can be rewritten as\n",
     "\n",
     "\\begin{aligned}\n",
+    "\\small\n",
     "u_{i,k-1} & = \\left\\{ -\\frac{1}{2}\\sigma^2 x_i^2 \\frac{\\triangle t}{\\triangle x^2} + r x_i \\frac{\\triangle t}{2\\triangle x} \\right\\} u_{i-1,k}\n",
     "\\\\\n",
     "& + \\left\\{ 1 + \\sigma^2 x_i^2 \\frac{\\triangle t}{\\triangle x^2}  + r \\triangle t \\right\\} u_{i,k}\n",
@@ -722,6 +725,7 @@
     "* Crank-Nicholson is an average of the explicit and implicit scheme:\n",
     "\n",
     "\\begin{aligned}\n",
+    "\\small\n",
     "\\FDut & = \\frac{1}{4}  \\sigma^2 x_i^2 \\left\\{ \\FDuxx + \\frac{u_{i+1,k+1}-2u_{i,k+1}+u_{i-1,k+1}}{\\triangle x^2} \\right\\}\n",
     "\\\\ \n",
     "    & + \\frac{1}{2} r x_i \\left\\{ \\FDuxc + \\frac{u_{i+1,k+1}-u_{i-1,k+1}}{2\\triangle x} \\right\\} \n",
