--- a/Lecture13.ipynb
+++ b/Lecture13.ipynb
@@ -202,6 +202,7 @@
     "* Write the Crank-Nicolson method as\n",
     "\n",
     "\\begin{aligned}\n",
+    "\\small\n",
     "\\renewcommand{fD}{\\mathfrak{D}}\n",
     "\\FDut  = & \\frac{1}{4}  \\sigma^2 x_i^2 \\left\\{ \\FDuxx + \\frac{u_{i+1,k+1}-2u_{i,k+1}+u_{i-1,k+1}}{\\triangle x^2} \\right\\}\n",
     "\\\\ \n",
@@ -827,6 +828,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
