--- a/PythonSetup.ipynb
+++ b/PythonSetup.ipynb
@@ -61,7 +61,7 @@
     "\n",
     "* <a href=http://continuum.io/downloads>Anaconda</a>: a popular free Python distribution\n",
     "\n",
-    "Both distributions come with necessary packages like IPython/numpy/pandas etc. \n",
+    "The Anaconda distribution comes with necessary packages like Jupyter/numpy/pandas etc. \n",
     "\n",
     "* Anaconda comes with command line package manager ```conda```\n",
     "* <a href=https://pypi.python.org/pypi/pip>pip</a> can be used to install Python packages that are not part of Anaconda distribution (rarely needed)"
@@ -75,12 +75,12 @@
     }
    },
    "source": [
-    "## Use IPython Notebook\n",
+    "## Use Jupyter/IPython Notebook\n",
     "\n",
     "\n",
-    "IPython notebook is a versatile and productive environment for scientific computing. All the lecture slides are created from IPython notebook.\n",
+    "Jupyter notebook is a versatile and productive environment for scientific computing. IPython is Jupyter's specialization for Python programming language. All the lecture slides are created from Jupyter/IPython notebook, and all the homework will be done in Jupyter/IPython notebook.\n",
     "\n",
-    "The following link is a step by step tutorial of ipython notebook, you can ignore anything related to plotly, we are not going the use it in the class. But the rest, in particular matpliblib, numpy and pandas will be used throughout the class. Please following the tutorial to get yourself familiar with them.\n",
+    "The following link is a step by step tutorial of Jupyter/IPython notebook, you can ignore anything related to plotly, we are not going the use it in the class. But the rest, in particular matpliblib, numpy and pandas will be used throughout the class. Please following the tutorial to get yourself familiar with them.\n",
     "\n",
     "https://plot.ly/python/ipython-notebook-tutorial/\n",
     "\n",
@@ -88,9 +88,9 @@
     "\n",
     "http://ipython.readthedocs.org/en/stable/interactive/tutorial.html\n",
     "\n",
-    "and Google is another exellent source for any Python or IPython questions. \n",
+    "and Google is another exellent source for any Python or Jupyter/IPython questions. \n",
     "\n",
-    "* IPython notebook works with newer versions of all major browsers. (IE older than version 10 does not work)"
+    "* Jupyter/IPython notebook works with newer versions of all major browsers. (IE older than version 10 does not work)"
    ]
   },
   {
@@ -103,13 +103,12 @@
    "source": [
     "## Python code/data for the class\n",
     "\n",
-    "The python code and data are in the subfolder lib and data under your nyumath2048 folder.\n",
+    "The python code and data are in the subfolder lib and data under your nyumath2048 folder, after you check out nyumath2048 from git.\n",
     "\n",
     "<span style=\"color:red\">**VERY IMPORTANT:** You need to create an environment variable PYTHONPATH and add the full path to your local nyumath2048/lib folder to your PYTHONPATH.</span>\n",
     "\n",
     "* this step allows python interpretor to find the python modules for the class\n",
-    "* you won't be able to run the class IPython notebook without performing this step\n",
-    "* many past students have run into problems because they ignored this step\n",
+    "* you won't be able to run the class Jupyter/IPython notebook without finishing this step\n",
     "\n",
     "If you don't know what environment variable is or how to create it in your OS, google it"
    ]
