Fix a typo: "ingored" -> "ignored"

--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -334,7 +334,7 @@
    "source": [
     "These are good advice, but quite superficial. \n",
     "\n",
-    "* all of them have been ingored, even in extremely successful projects\n",
+    "* all of them have been ignored, even in extremely successful projects\n",
     "* they are usually not the critical differentiator between successes and failures"
    ]
   },
