added binary rounding example

--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -334,7 +334,7 @@
    "source": [
     "These are good advice, but quite superficial. \n",
     "\n",
-    "* all of them have been ignored, even in extremely successful projects\n",
+    "* all of them have been compromised, even in very successful projects\n",
     "* they are usually not the critical differentiator between successes and failures"
    ]
   },
@@ -348,7 +348,9 @@
    "source": [
     "## Best advice for the real world:\n",
     "\n",
-    "by Paul Phillips (quoting George Orwell's 1984) \"We're doing it all wrong\":"
+    "by Paul Phillips \"We're doing it all wrong\":\n",
+    "\n",
+    "(quoting George Orwell's 1984)"
    ]
   },
   {
@@ -362,31 +364,13 @@
     "#### War is peace\n",
     " * Fight your war at the boundary so that you can have peace within\n",
     " * Challenge your clients to reduce the scope of your deliverable\n",
-    " * Define a minimal set of interactions to the outside world"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
+    " * Define a minimal set of interactions to the outside world\n",
+    "\n",
     "#### Ignorance is strength\n",
     " * Design dumb modules that only do one thing\n",
     " * Keep it simple and stupid\n",
-    " * Separation of concerns, modular"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
+    " * Separation of concerns, modular\n",
+    "\n",
     "#### Freedom is slavery\n",
     " * Must be disciplined in testing, code review, releases etc. \n",
     " * Limit the interface of your module (or external commitments)\n",
@@ -397,14 +381,12 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "subslide"
     }
    },
    "source": [
     "\n",
-    "<center><img src=\"img/sun-tzu.jpg\" width=400 height=400></center>\n",
-    "\n",
-    "Sun Tzu: \"the supreme art of quant modelling is to solve problems without coding\"\n"
+    "Sun Tzu (孙子): \"the supreme art of quant modelling is to solve problems without coding\"\n"
    ]
   },
   {
@@ -456,7 +438,14 @@
    "source": [
     "Eric Raymond, \"How to Become a Hacker\":\n",
     "\n",
-    "\"Lisp is worth learning for the profound enlightenment experience you will have when you finally get it; that experience will make you a better programmer for the rest of your days, even if you never actually use Lisp itself a lot.\""
+    "\"Lisp is worth learning for the profound enlightenment experience you will have when you finally get it; that experience will make you a better programmer for the rest of your days, even if you never actually use Lisp itself a lot.\"\n",
+    "\n",
+    "Greenspun's tenth rule of programming:\n",
+    "\n",
+    "\"Any sufficiently complicated C or Fortran program contains an ad-hoc, informally-specified, bug-ridden, slow implementation of half of Common Lisp.\"\n",
+    "\n",
+    "- Clojure is a modern implementation of Lisp\n",
+    "- Julia borrowed heavily from Lisp, very promising"
    ]
   },
   {
@@ -608,9 +597,9 @@
     "## Rounding under IEEE754\n",
     "\n",
     "Default rule: round to the nearest, ties to even digit\n",
-    "* Example, round to 4 significant digit: \n",
-    " * $3.1245 \\rightarrow 3.124$\n",
-    " * $43515 \\rightarrow 43520$ \n",
+    "* Example, round to 4 significant digit(bit): \n",
+    " * decimal: $3.1245 \\rightarrow 3.124$, $43515 \\rightarrow 43520$ \n",
+    " * binary: $10.11100 \\rightarrow 11.00$, $1100100 \\rightarrow 1100000 $\n",
     "* Addition and multiplication are commutative with rounding, but not associative\n",
     "* Intermediate calculations could be done at higher precision to minimize numerical error, if supported by the hardware\n",
     "  * Intel CPU's FPU uses 80bit representation for all intermediate calculation, even if input/outputs are in 32 bit floats\n",
