--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -249,46 +249,16 @@
    "source": [
     "## Before optimizing for speed\n",
     "\n",
-    "#### Correctness\n",
-    "* \"those who would give up correctness for a little temporary performance deserve neither correctness nor performance\"\n",
-    "* \"the greatest performance improvement of all is when system goes from not-working to working\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "#### Modifiability\n",
-    "* \"modification is undesirable but modifiability is paramount\"\n",
-    "* modular design, learn from hardware designers"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "#### Simplicity\n",
-    "* no obvious defects is not the same as obviously no defects"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "#### Other desirable features:\n",
-    "* Scalability, robustness, Easy support and maintenanc etc."
+    "* Correctness\n",
+    "    - \"those who would give up correctness for a little temporary performance deserve neither correctness nor performance\"\n",
+    "    - \"the greatest performance improvement of all is when system goes from not-working to working\"\n",
+    "* Modifiability\n",
+    "    - \"modification is undesirable but modifiability is paramount\"\n",
+    "    - modular design, learn from hardware designers\n",
+    "* Simplicity\n",
+    "    - no obvious defects is not the same as obviously no defects\n",
+    "* Other desirable features:\n",
+    "    - Scalability, robustness, Easy support and maintenanc etc."
    ]
   },
   {
@@ -342,7 +312,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "source": [
@@ -350,28 +320,17 @@
     "\n",
     "by Paul Phillips \"We're doing it all wrong\":\n",
     "\n",
-    "(quoting George Orwell's 1984)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "#### War is peace\n",
+    "(quoting George Orwell's 1984)\n",
+    "\n",
+    "- War is peace\n",
     " * Fight your war at the boundary so that you can have peace within\n",
     " * Challenge your clients to reduce the scope of your deliverable\n",
     " * Define a minimal set of interactions to the outside world\n",
-    "\n",
-    "#### Ignorance is strength\n",
+    "- Ignorance is strength\n",
     " * Design dumb modules that only do one thing\n",
     " * Keep it simple and stupid\n",
     " * Separation of concerns, modular\n",
-    "\n",
-    "#### Freedom is slavery\n",
+    "- Freedom is slavery\n",
     " * Must be disciplined in testing, code review, releases etc. \n",
     " * Limit the interface of your module (or external commitments)\n",
     " * Freedom $\\rightarrow$ possibilities $\\rightarrow$ complexity $\\rightarrow$ unmodifiable code $\\rightarrow$ slavery"
@@ -385,8 +344,9 @@
     }
    },
    "source": [
+    "## The art of modeling\n",
     "\n",
-    "Sun Tzu (孙子): \"the supreme art of quant modelling is to solve problems without coding\"\n"
+    "Sun Tzu (孙子): \"the supreme art of quant modeling is to solve problems without coding\"\n"
    ]
   },
   {
@@ -598,7 +558,7 @@
     "\n",
     "Default rule: round to the nearest, ties to even digit\n",
     "* Example, round to 4 significant digit(bit): \n",
-    " * decimal: $3.1245 \\rightarrow 3.124$, $43515 \\rightarrow 43520$ \n",
+    " * decimal: $3.12450 \\rightarrow 3.1240$, $435150 \\rightarrow 435200$ \n",
     " * binary: $10.11100 \\rightarrow 11.00$, $1100100 \\rightarrow 1100000 $\n",
     "* Addition and multiplication are commutative with rounding, but not associative\n",
     "* Intermediate calculations could be done at higher precision to minimize numerical error, if supported by the hardware\n",
