--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -312,7 +312,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
