--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -320,17 +320,28 @@
     "\n",
     "by Paul Phillips \"We're doing it all wrong\":\n",
     "\n",
-    "(quoting George Orwell's 1984)\n",
-    "\n",
-    "- War is peace\n",
+    "(quoting George Orwell's 1984)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### War is peace\n",
     " * Fight your war at the boundary so that you can have peace within\n",
     " * Challenge your clients to reduce the scope of your deliverable\n",
     " * Define a minimal set of interactions to the outside world\n",
-    "- Ignorance is strength\n",
+    " \n",
+    "#### Ignorance is strength\n",
     " * Design dumb modules that only do one thing\n",
     " * Keep it simple and stupid\n",
     " * Separation of concerns, modular\n",
-    "- Freedom is slavery\n",
+    " \n",
+    "#### Freedom is slavery\n",
     " * Must be disciplined in testing, code review, releases etc. \n",
     " * Limit the interface of your module (or external commitments)\n",
     " * Freedom $\\rightarrow$ possibilities $\\rightarrow$ complexity $\\rightarrow$ unmodifiable code $\\rightarrow$ slavery"
@@ -344,7 +355,7 @@
     }
    },
    "source": [
-    "## The art of modeling\n",
+    "## Less is more\n",
     "\n",
     "Sun Tzu (孙子): \"the supreme art of quant modeling is to solve problems without coding\"\n"
    ]
