--- a/syllabus.ipynb
+++ b/syllabus.ipynb
@@ -1,102 +1,112 @@
 {
- "metadata": {
-  "name": "",
-  "signature": "sha256:cd6f5353e4e11f1309db9f5f79322f207e8c6a9d464d26a8a160fe93bc18adea"
- },
- "nbformat": 3,
- "nbformat_minor": 0,
- "worksheets": [
+ "cells": [
   {
-   "cells": [
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "# Scientific Computing in Finance\n",
-      "\n",
-      "* Math-GA 2048,  Spring 2016\n",
-      "* Courant Institute of Mathematical Sciences, New York University\n",
-      "\n",
-      "This course covers scientific computing methods and techniques, and their applications in Finance.\n",
-      "The course is designed to have a strong focus in quantitative Finance practices, topics are often\n",
-      "presented with real world examples and the state of art practices.\n",
-      "\n",
-      "Text book:\n",
-      "* [D. Bindel and J. Goodman: Principles of Scientific Computing, 2009.](http://www.cs.nyu.edu/courses/spring09/G22.2112-001/book/book.pdf)\n",
-      "\n",
-      "References:\n",
-      "* P. Glasserman: Monte Carlo method in Financial Engineering\n",
-      "* L. Anderson and V. Piterbarg: Interest Rate Modeling, Volume I and II 2010.\n",
-      "\n",
-      "Content:\n",
-      "1. Introduction: (1 week: Yadong)\n",
-      " * overview of the class\n",
-      " * introduction to computer architecture, memory hierarchy and performance\n",
-      " * overview of good software practices\n",
-      " * source of errors, IEEE standard of floating point numbers\n",
-      " * error propagation and condition number\n",
-      "2. Linear Algebra (2 weeks, Yadong)\n",
-      " * review of linear algebra\n",
-      " * solving linear system: Gaussian elimination, LU factorization\n",
-      " * correlation and covariance matrix, Cholesky decomposition\n",
-      " * matrix calculus, mean/variance portfolio optimization\n",
-      " * least square and Ridge regression\n",
-      " * QR decomposition and Householder transformation\n",
-      " * eigen values and eigen vectors\n",
-      " * PCA analysis and its applications in Finance\n",
-      " * SVD analysis\n",
-      " * Conditioning, condition number for linear systems\n",
-      "3. Interpolation, curve building and root search (1.5 weeks, Yadong)\n",
-      " * Overview of 1-D root search methods: Bisection, Secant, Newton-Raphson and Brent\n",
-      " * Types of curves and curve building in Finance\n",
-      " * Piecewise linear/constant interpolation\n",
-      " * Cubic spline, Tension spline\n",
-      " * Bootstrapping and iterative algorithm\n",
-      " * Perturbation and locality\n",
-      "4. derivatives and hedging (1.5 weeks, Yadong)\n",
-      " * Order of accuracy in finite difference\n",
-      " * Derivative and deltas: Jacobian matrix for delta transformation\n",
-      " * Hedging with bespoke instruments, and a small number of liquid instruments\n",
-      " * Hedge optimization\n",
-      " * Numerical integration and its accuracy\n",
-      "5. Optimization (2 weeks, Hongwei)\n",
-      " * Introduction, survey of optimization problems\n",
-      "    * Unconstrained, onstrained\n",
-      "    * Linear programming, Quadratic programming\n",
-      "    * Integer programming, Mixed Integer programming\n",
-      "    * Nonlinear programming, Convex programming\n",
-      "    * Dynamic programming, Stochastic Programming\n",
-      " * Simplex Method, and asset/liability cash flow matching\n",
-      " * Nonlinear programming\n",
-      "    * Optimality conditions, Lagrange multipliers, KKT.\n",
-      "    * Volatility Estimation with GARCH\n",
-      "    * Dynamic programming --- Option Pricing, Structured ABS Securities\n",
-      " * Optional: Stochastic programming\n",
-      "6. Monte Carlo simulation (2 weeks, Yadong)\n",
-      " * Pseudo random number generators\n",
-      " * MC error, sample statistics, curse of dimensionality\n",
-      " * Discretization of SDEs\n",
-      " * Least square Monte Carlo and American options\n",
-      " * Variance reduction techniques\n",
-      "    * Control variate\n",
-      "    * Importance Sampling\n",
-      "    * Quasi random sequence\n",
-      "    * and antithetic variables, moment matching and stratified sampling\n",
-      "7. Maximum entropy and allocation (1 week, Yadong)\n",
-      " * Information entropy\n",
-      " * Maximum entropy and the dual problem\n",
-      " * Risk capital allocation methods: Shapley, Aumann-Shapley, Euler and Constrained Shapley\n",
-      "8. ODE/PDE (2 weeks, Hongwei)\n",
-      " * ODEs, Runge Kutta method (e.g. the ODE from affine term structure models)\n",
-      " * Parabolic PDE in finance from valuation problems\n",
-      " * Tree method, Finite difference method\n",
-      " * Stability, Convergence\n",
-      " * Explicit/Implicit Method, Crank Nicolson\n",
-      " * Optional: multi-factor PDE, operator split and ADI met"
-     ]
-    }
-   ],
-   "metadata": {}
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scientific Computing in Finance\n",
+    "\n",
+    "* Math-GA 2048,  Spring 2018\n",
+    "* Courant Institute of Mathematical Sciences, New York University\n",
+    "\n",
+    "This course covers scientific computing methods and techniques, and their applications in Finance.\n",
+    "The course is designed to have a strong focus in quantitative Finance practices, topics are often\n",
+    "presented with real world examples and the state of art practices.\n",
+    "\n",
+    "Text book:\n",
+    "* [D. Bindel and J. Goodman: Principles of Scientific Computing, 2009.](http://www.cs.nyu.edu/courses/spring09/G22.2112-001/book/book.pdf)\n",
+    "\n",
+    "References:\n",
+    "* P. Glasserman: Monte Carlo method in Financial Engineering\n",
+    "* L. Anderson and V. Piterbarg: Interest Rate Modeling, Volume I and II 2010.\n",
+    "\n",
+    "Content:\n",
+    "1. Introduction: (1 week: Yadong)\n",
+    " * overview of the class\n",
+    " * introduction to computer architecture, memory hierarchy and performance\n",
+    " * overview of good software practices\n",
+    " * source of errors, IEEE standard of floating point numbers\n",
+    " * error propagation and condition number\n",
+    "2. Linear Algebra (2 weeks, Yadong)\n",
+    " * review of linear algebra\n",
+    " * solving linear system: Gaussian elimination, LU factorization\n",
+    " * correlation and covariance matrix, Cholesky decomposition\n",
+    " * matrix calculus, mean/variance portfolio optimization\n",
+    " * least square and Ridge regression\n",
+    " * QR decomposition and Householder transformation\n",
+    " * eigen values and eigen vectors\n",
+    " * PCA analysis and its applications in Finance\n",
+    " * SVD analysis\n",
+    " * Conditioning, condition number for linear systems\n",
+    "3. Interpolation, curve building and root search (1.5 weeks, Yadong)\n",
+    " * Overview of 1-D root search methods: Bisection, Secant, Newton-Raphson and Brent\n",
+    " * Types of curves and curve building in Finance\n",
+    " * Piecewise linear/constant interpolation\n",
+    " * Cubic spline, Tension spline\n",
+    " * Bootstrapping and iterative algorithm\n",
+    " * Perturbation and locality\n",
+    "4. derivatives and hedging (1.5 weeks, Yadong)\n",
+    " * Order of accuracy in finite difference\n",
+    " * Derivative and deltas: Jacobian matrix for delta transformation\n",
+    " * Hedging with bespoke instruments, and a small number of liquid instruments\n",
+    " * Hedge optimization\n",
+    " * Numerical integration and its accuracy\n",
+    "5. Optimization (2 weeks, Wujiang)\n",
+    " * Introduction, survey of optimization problems\n",
+    "    * Unconstrained, onstrained\n",
+    "    * Linear programming, Quadratic programming\n",
+    "    * Integer programming, Mixed Integer programming\n",
+    "    * Nonlinear programming, Convex programming\n",
+    "    * Dynamic programming, Stochastic Programming\n",
+    " * Simplex Method, and asset/liability cash flow matching\n",
+    " * Nonlinear programming\n",
+    "    * Optimality conditions, Lagrange multipliers, KKT.\n",
+    "    * Volatility Estimation with GARCH\n",
+    "    * Dynamic programming --- Option Pricing, Structured ABS Securities\n",
+    " * Optional: Stochastic programming\n",
+    "6. Monte Carlo simulation (2 weeks, Yadong)\n",
+    " * Pseudo random number generators\n",
+    " * MC error, sample statistics, curse of dimensionality\n",
+    " * Discretization of SDEs\n",
+    " * Least square Monte Carlo and American options\n",
+    " * Variance reduction techniques\n",
+    "    * Control variate\n",
+    "    * Importance Sampling\n",
+    "    * Quasi random sequence\n",
+    "    * and antithetic variables, moment matching and stratified sampling\n",
+    "7. Maximum entropy and allocation (1 week, Yadong)\n",
+    " * Information entropy\n",
+    " * Maximum entropy and the dual problem\n",
+    " * Risk capital allocation methods: Shapley, Aumann-Shapley, Euler and Constrained Shapley\n",
+    "8. ODE/PDE (2 weeks, Wujiang)\n",
+    " * ODEs, Runge Kutta method (e.g. the ODE from affine term structure models)\n",
+    " * Parabolic PDE in finance from valuation problems\n",
+    " * Tree method, Finite difference method\n",
+    " * Stability, Convergence\n",
+    " * Explicit/Implicit Method, Crank Nicolson\n",
+    " * Optional: multi-factor PDE, operator split and ADI met"
+   ]
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 1
 }
