--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -573,7 +573,7 @@
     " * binary: $10.11100 \\rightarrow 11.00$, $1100100 \\rightarrow 1100000 $\n",
     "* Addition and multiplication are commutative with rounding, but not associative\n",
     "* Intermediate calculations could be done at higher precision to minimize numerical error, if supported by the hardware\n",
-    "  * Intel CPU's FPU uses 80bit representation for all intermediate calculation, even if input/outputs are in 32 bit floats\n",
+    "  * Intel CPU's FPU can use 80bit representation for intermediate calculations, even if input/outputs are in 64/32 bit floats\n",
     "  * Early version of Java (before v1.2) enforces intermediate calculation to be in 32/64bits for float/double for binary compatibility - a poor choice"
    ]
   },
