--- a/syllabus.ipynb
+++ b/syllabus.ipynb
@@ -86,6 +86,15 @@
     " * Explicit/Implicit Method, Crank Nicolson\n",
     " * Optional: multi-factor PDE, operator split and ADI met"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
