Correct typos in Lecture 2

--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -622,7 +622,7 @@
     }
    },
    "source": [
-    "where the $P$ matrix represent the row permutation. The permutation (pivoting) also improve the numerical stability:"
+    "where the $P$ matrix represents the row permutation. The permutation (pivoting) also improve the numerical stability:"
    ]
   },
   {
@@ -807,7 +807,7 @@
     "ax1 = fig.add_subplot(121)\n",
     "f3.plot(title='Historical Prices', ax=ax1);\n",
     "\n",
-    "weeks_in_year = 52. #business weeks per yer\n",
+    "weeks_in_year = 52. #business weeks per year\n",
     "\n",
     "ax2 = fig.add_subplot(122)\n",
     "r = np.log(f3).diff()\n",
@@ -1157,7 +1157,7 @@
     "Ubiquitous in quantitative Finance\n",
     "\n",
     "* The most common processes for asset prices and risk factors\n",
-    "* The vast matjority of quantitative finance models are based on Brownian motions.\n",
+    "* The vast majority of quantitative finance models are based on Brownian motions.\n",
     "\n",
     "Example: correlated n-dimensional Geometric Brownian motion:\n",
     "\n",
