--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -281,7 +281,9 @@
     }
    },
    "source": [
-    "# LU Factorization"
+    "# LU Factorization\n",
+    "\n",
+    "Factorization: to resolve into factors."
    ]
   },
   {
@@ -920,7 +922,7 @@
     }
    },
    "source": [
-    "* Why don't we compute the correlation and covariance of the price levels?"
+    "* Does it make sense to compute the covariance and correlation matrix of the price levels?"
    ]
   },
   {
@@ -1157,7 +1159,6 @@
     "Ubiquitous in quantitative Finance\n",
     "\n",
     "* The most common processes for asset prices and risk factors\n",
-    "* The vast matjority of quantitative finance models are based on Brownian motions.\n",
     "\n",
     "Example: correlated n-dimensional Geometric Brownian motion:\n",
     "\n",
@@ -1543,14 +1544,15 @@
     "\n",
     "which solves the portfolio $\\bs w^*$ with the maximum Sharpe ratio under the view $\\bs f$:\n",
     " * $\\bs w^*$ is a unique solution\n",
-    " * all portfolios with optimal Sharpe ratio have the same risky asset mix"
+    " * all portfolios with optimal Sharpe ratio have the same risky asset mix\n",
+    " * No need to constrain the total value because Sharp ratio is invariant by scaling the portfolio."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -2424,7 +2426,7 @@
     "* L1: $\\Vert \\bs u\\Vert _1 = \\sum_i | u_i |$\n",
     "* L2 (Euclidean): $\\Vert \\bs u\\Vert _2 = (\\sum u_i^2)^{\\frac{1}{2}} = (\\bs u^T \\bs u)^\\frac{1}{2}$\n",
     "* Lp: $\\Vert \\bs u\\Vert _p = (\\sum u_i^p)^{\\frac{1}{p}}$\n",
-    "* L${\\infty}$: $\\Vert \\bs u\\Vert _\\infty = \\max(u_1, u_2, ..., u_n)$"
+    "* L${\\infty}$: $\\Vert \\bs u\\Vert _\\infty = \\max(|u_1|, |u_2|, ..., |u_n|)$"
    ]
   },
   {
