--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -256,6 +256,33 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Regularization\n",
+    "\n",
+    "Ridge regression is an example of regularization. Two other popular regularizations are:\n",
+    "\n",
+    "* LASSO regression: resulting sparse $\\bs \\beta$\n",
+    "\n",
+    "$$\n",
+    "l(\\bs \\beta) = \\Vert X \\bs{\\beta - y} \\Vert_2^2 + \\lambda \\Vert W \\bs \\beta \\Vert_1\n",
+    "$$\n",
+    "\n",
+    "* Elasticnet: in between LASSO and Ridge\n",
+    "\n",
+    "$$\n",
+    "l(\\bs \\beta) = \\Vert X \\bs{\\beta - y} \\Vert_2^2 + \\lambda_1 \\Vert W \\bs \\beta \\Vert_1 + \\lambda_2 \\Vert W \\bs \\beta \\Vert_2^2\n",
+    "$$\n",
+    "\n",
+    "Both LASSO and elasticnet reduces to support vector machine (SVM)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -273,7 +300,7 @@
     }
    },
    "source": [
-    "##Definitions\n",
+    "## Definitions\n",
     "\n",
     "For a square matrix $A$ of size $n \\times n$, if there exists a vector $\\bs {v \\ne 0}$ and a scalar $\\lambda \\ne 0$ so that:\n",
     "\n",
@@ -314,7 +341,7 @@
     }
    },
    "source": [
-    "##Characteristic equation\n",
+    "## Characteristic equation\n",
     "Rewrite the equation as:\n",
     "\n",
     "$$ (A - \\lambda I) \\bs {v = 0}$$\n",
@@ -379,7 +406,7 @@
     }
    },
    "source": [
-    "##Properties of eigenvectors\n",
+    "## Properties of eigenvectors\n",
     "\n",
     "If $A$ has $n$ distinct eigen values, we can write:\n",
     "\n",
@@ -1019,8 +1046,7 @@
    "source": [
     "# Principal Component Analysis\n",
     "\n",
-    "Mahatma Gandhi: action expresses priorities. \n",
-    "\n",
+    "Mahatma Gandhi: action expresses priorities.\n",
     "$\\renewcommand{bt}[1]{\\tilde{\\bs #1}}$"
    ]
   },
