--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -503,9 +503,24 @@
     "$$ AR = P^{-1}BP R = R \\Lambda \\iff B (PR) = (PR) \\Lambda $$ \n",
     "\n",
     "* $B$ is also called a similarity transformation of $A$, representing the same operation in different basis\n",
-    "* $P$ is orthogonal if $A$ is real and symmetric\n",
+    "* $P$ is orthogonal if $A$ is real and symmetric"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Solving eigenvalues\n",
     "\n",
-    "The basic idea of computing eigen values for $A$:\n",
+    "It is very challenging to solve eigen values for large matrices.\n",
+    "* Solving characteristic equation is not numerically feasible.\n",
+    "* QR algorithm is an important breakthrough in numerical analysis.\n",
+    "\n",
+    "The basic idea of solving eigen values of matrix $A$:\n",
     "* Find a similarity transformation $B = PAP^{-1}$ so that $B$ is a triangular matrix\n",
     "* $A$ and $B$ has identical eigenvalues\n",
     "* Eigen values of a triangular matrix $B$ is just its diagonal elements."
@@ -1585,7 +1600,7 @@
    },
    "source": [
     "However, neiher is true because: \n",
-    "* $\\Sigma R_C$ is not diagonal: $(\\Sigma R_C)(\\Sigma R_C)^T = \\Sigma R_C R_C^T \\Sigma = \\Sigma\\Sigma \\ne I$\n",
+    "* $\\Sigma R_C$ is not orthogonal: $(\\Sigma R_C)(\\Sigma R_C)^T = \\Sigma R_C R_C^T \\Sigma = \\Sigma\\Sigma \\ne I$\n",
     "  * $V = \\Sigma C \\Sigma$, $V$ and $C$ are not similar\n",
     "* $\\Sigma R_C \\ne R_C \\Sigma$, even when $\\Sigma$ is diagonal.\n",
     "\n",
