fixed more typos

--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -264,7 +264,7 @@
     "\n",
     "Ridge regression is an example of regularization. Two other popular regularizations are:\n",
     "\n",
-    "* LASSO regression: resulting sparse $\\bs \\beta$\n",
+    "* LASSO regression: resulting in sparse $\\bs \\beta$\n",
     "\n",
     "$$\n",
     "l(\\bs \\beta) = \\Vert X \\bs{\\beta - y} \\Vert_2^2 + \\lambda \\Vert W \\bs \\beta \\Vert_1\n",
@@ -276,7 +276,7 @@
     "l(\\bs \\beta) = \\Vert X \\bs{\\beta - y} \\Vert_2^2 + \\lambda_1 \\Vert W \\bs \\beta \\Vert_1 + \\lambda_2 \\Vert W \\bs \\beta \\Vert_2^2\n",
     "$$\n",
     "\n",
-    "Both LASSO and elasticnet reduces to support vector machine (SVM)."
+    "Both LASSO and elasticnet reduce to support vector machine (SVM)."
    ]
   },
   {
@@ -523,7 +523,7 @@
     "The basic idea of solving eigen values of matrix $A$:\n",
     "* Find a similarity transformation $B = PAP^{-1}$ so that $B$ is a triangular matrix\n",
     "* $A$ and $B$ has identical eigenvalues\n",
-    "* Eigen values of a triangular matrix $B$ is just its diagonal elements."
+    "* Eigen values of the triangular matrix $B$ are simply its diagonal elements."
    ]
   },
   {
@@ -1518,7 +1518,8 @@
     "$$\n",
     "\n",
     "* $\\bt z$ is independent standard normal random vector.\n",
-    "* observe that the $L$ doesn't have to be square or triangular, as long as $V = LL^T$"
+    "* observe that the $L$ doesn't have to be square or triangular, as long as $V = LL^T$\n",
+    "* we can reduce $\\bt z$ dimension by finding a rectanglar $\\dot L$ so that $V \\approx \\dot L {\\dot L}^T$"
    ]
   },
   {
@@ -1804,7 +1805,7 @@
     " * Key consideration: stationarity and mean reversion, horizon of your model prediction\n",
     " \n",
     "* Spot or forward\n",
-    " * Forward is usually a better choice than spot because of spurious correlaitons\n",
+    " * Forward is usually a better choice than spot\n",
     " \n",
     "Since the PCA is commonly applied to a correlation/covariance matrix, it is equivalent to ask what variables' correlation/covariance matrix we should model."
    ]
@@ -1990,7 +1991,7 @@
     "\n",
     "* The high correlation between spot rates to similar tenors are by construction\n",
     "* PCA analysis can be misleading in percentage of variance explained\n",
-    "  * the variance of sot rates of short tenors are counted multiple times\n",
+    "  * the variance of spot rates of short tenors are counted multiple times\n",
     "* May not be a problem if we have unlimited precision, but we usually only keep the first few eigen vectors in PCA\n",
     "* it's usually better to model the correlation/covariance matrix of forward rates"
    ]
